--- a/le_gourmand.html
+++ b/le_gourmand.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Full Palette</title>
+    <title>The Full gourmand</title>
 
     <!-- Style sheets -->
     <link rel="stylesheet" href="css/main.css" type="text/css">
@@ -48,74 +48,110 @@
 
             <h2>ENTREES</h2>
             <div class="line-gourmand"></div>
-            <div class="dish-gourmand">
-                <article class="dish-info-gourmand">
-                    <h3>Tuna Carpaccio</h3>
-                    <p>Seasoned with yuzu</p>
-                </article>
-                <span>25€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-gourmand">
+                    <div class="dish-gourmand">
+                        <article class="dish-info-gourmand">
+                            <h3>Tuna Carpaccio</h3>
+                            <p>Seasoned with yuzu</p>
+                        </article>
+                        <span class="dish-gourmand-price">25€</span>
+                    </div>
+                </div>
             </div>
-            <div class="dish-gourmand">
-                <article class="dish-info-gourmand">
-                    <h3>Crunchy Lobster Croquets</h3>
-                    <p>With seasonal vegetables</p>
-                </article>
-                <span>35€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-gourmand">
+                    <div class="dish-gourmand">
+                        <article class="dish-info-gourmand">
+                            <h3>Crunchy Lobster Croquets</h3>
+                            <p>With seasonal vegetables</p>
+                        </article>
+                        <span class="dish-gourmand-price">35€</span>
+                    </div>
+                </div>
             </div>
-            <div class="dish-gourmand">
-                <article class="dish-info-gourmand">
-                    <h3>Mushroom Soup</h3>
-                    <p>With truffles</p>
-                </article>
-                <span>20€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-gourmand">
+                    <div class="dish-gourmand">
+                        <article class="dish-info-gourmand">
+                            <h3>Mushroom Soup</h3>
+                            <p>With truffles</p>
+                        </article>
+                        <span class="dish-gourmand-price">20€</span>
+                    </div>
+                </div>
             </div>
             <!-- Main dish -->
             <h2>MAIN DISH</h2>
             <div class="line-gourmand"></div>
-            <div class="dish-gourmand">
-                <article class="dish-info-gourmand">
-                    <h3>Roast Chicken with Provincal Herbs</h3>
-                    <p>With truffle cream</p>
-                </article>
-                <span>40€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-gourmand">
+                    <div class="dish-gourmand">
+                        <article class="dish-info-gourmand">
+                            <h3>Roast Chicken with Provincal Herbs</h3>
+                            <p>With truffle cream</p>
+                        </article>
+                        <span class="dish-gourmand-price">40€</span>
+                    </div>
+                </div>
             </div>
-            <div class="dish-gourmand">
-                <article class="dish-info-gourmand">
-                    <h3>Roasted Lobster</h3>
-                    <p>With seasonel vegetables</p>
-                </article>
-                <span>35€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-gourmand">
+                    <div class="dish-gourmand">
+                        <article class="dish-info-gourmand">
+                            <h3>Roasted Lobster</h3>
+                            <p>With seasonel vegetables</p>
+                        </article>
+                        <span class="dish-gourmand-price">35€</span>
+                    </div>
+                </div>
             </div>
-            <div class="dish-gourmand">
-                <article class="dish-info-gourmand">
-                    <h3>Angust Beef Ribs</h3>
-                    <p>With mashed parshnips</p>
-                </article>
-                <span>44€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-gourmand">
+                    <div class="dish-gourmand">
+                        <article class="dish-info-gourmand">
+                            <h3>Angust Beef Ribs</h3>
+                            <p>With mashed parshnips</p>
+                        </article>
+                        <span class="dish-gourmand-price">44€</span>
+                    </div>
+                </div>
             </div>
             <!-- Desserts -->
             <h2>DESSERTS</h2>
             <div class="line-gourmand"></div>
-            <div class="dish-gourmand">
-                <article class="dish-info-gourmand">
-                    <h3>Assorted Dessert P|late</h3>
-                    <p>Chef's choice</p>
-                </article>
-                <span>18€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-gourmand">
+                    <div class="dish-gourmand">
+                        <article class="dish-info-gourmand">
+                            <h3>Assorted Dessert P|late</h3>
+                            <p>Chef's choice</p>
+                        </article>
+                        <span class="dish-gourmand-price">18€</span>
+                    </div>
+                </div>
             </div>
-            <div class="dish-gourmand">
-                <article class="dish-info-gourmand">
-                    <h3>Crème brulée</h3>
-                    <p>Revisited</p>
-                </article>
-                <span>22€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-gourmand">
+                    <div class="dish-gourmand">
+                        <article class="dish-info-gourmand">
+                            <h3>Crème brulée</h3>
+                            <p>Revisited</p>
+                        </article>
+                        <span class="dish-gourmand-price">22€</span>
+                    </div>
+                </div>
             </div>
-            <div class="dish-gourmand">
-                <article class="dish-info-gourmand">
-                    <h3>Tiramisu</h3>
-                    <p>With hazelnuts</p>
-                </article>
-                <span>23€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-gourmand">
+                    <div class="dish-gourmand">
+                        <article class="dish-info-gourmand">
+                            <h3>Tiramisu</h3>
+                            <p>With hazelnuts</p>
+                        </article>
+                        <span class="dish-gourmand-price">23€</span>
+                    </div>
+                </div>
             </div>
             <button class="order">Order</button>
         </article>
@@ -135,7 +171,7 @@
             <a href="#">
                 <p>Legal</p>
             </a>
-            <a href="#">
+            <a href="mailto:info@ohmyfood.com">
                 <p>Contact</p>
             </a>
         </div>
