--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -80,43 +80,47 @@
                         <img src="/images/restaurants - main-page/jay-wennington-N_Y88TWmGwA-unsplash.webp"
                             alt="restaurant picture">
                         <span>New</span>
-                        <div class="ad-info">
+                    </a>
+                    <div class="ad-info">
+                        <a href="the_full_palette.html">
                             <article class="info">
                                 <h4>The Full Palette</h4>
                                 <p>Paris</p>
                             </article>
-                            <i class="far fa-heart main-heart1"></i>
-                            <i class="fas fa-heart main-heart2"></i>
-                        </div>
-                    </a>
+                        </a>
+                        <i class="far fa-heart main-heart1"></i>
+                        <i class="fas fa-heart main-heart2"></i>
+                    </div>
                 </div>
                 <div class="rst-ad">
                     <a target="_self" href="the_enchanted_plate.html">
                         <img src="./images/restaurants - main-page/stil-u2Lp8tXIcjw-unsplash.webp"
                             alt="restaurant picture">
                         <span>New</span>
-                        <div class="ad-info">
+                    </a>
+                    <div class="ad-info">
+                        <a href="the_enchanted_plate.html">
                             <article class="info">
                                 <h4>The Enchanted Plate</h4>
                                 <p>Paris</p>
                             </article>
-                            <i class="far fa-heart main-heart1"></i>
-                            <i class="fas fa-heart main-heart2"></i>
-                        </div>
-                    </a>
+                        </a>
+                        <i class="far fa-heart main-heart1"></i>
+                        <i class="fas fa-heart main-heart2"></i>
+                    </div>
                 </div>
                 <div class="rst-ad">
                     <a target="_self" href="le_gourmand.html">
                         <img src="images/restaurants - main-page/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp"
                             alt="restaurant picture">
-                        <div class="ad-info">
+                    </a>
+                    <div class="ad-info">
+                        <a href="le_gourmand.html">
                             <article class="info">
                                 <h4>Le Gourmand</h4>
                                 <p>Paris</p>
                             </article>
-                        </div>
-                    </a>
-                    <div class="main-hearts">
+                        </a>
                         <i class="far fa-heart main-heart1"></i>
                         <i class="fas fa-heart main-heart2"></i>
                     </div>
@@ -125,15 +129,17 @@
                     <a target="_self" href="bastille.html">
                         <img src="images/restaurants - main-page/toa-heftiba-DQKerTsQwi0-unsplash.webp"
                             alt="restaurant picture">
-                        <div class="ad-info">
+                    </a>
+                    <div class="ad-info">
+                        <a href="bastille.html">
                             <article class="info">
                                 <h4>Bastille</h4>
                                 <p>Paris</p>
                             </article>
-                            <i class="far fa-heart main-heart1"></i>
-                            <i class="fas fa-heart main-heart2"></i>
-                        </div>
-                    </a>
+                        </a>
+                        <i class="far fa-heart main-heart1"></i>
+                        <i class="fas fa-heart main-heart2"></i>
+                    </div>
                 </div>
             </article>
         </main>
@@ -156,7 +162,6 @@
                 </a>
             </div>
         </footer>
-
     </div>
 </body>
 
