--- a/the_enchanted_plate.html
+++ b/the_enchanted_plate.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Full Palette</title>
+    <title>The Full pla
+    </title>
 
     <!-- Style sheets -->
     <link rel="stylesheet" href="css/main.css" type="text/css">
@@ -37,7 +38,7 @@
     </header>
     <!-- MAIN SECTION -->
     <main>
-        <!--The Full Palette Menue section  -->
+        <!--The Full plat Menue section  -->
         <article class="menu-plate">
             <article class="menu-title-plate">
                 <h1>The Enchanted Plate</h1>
@@ -46,83 +47,123 @@
             <!-- Starters -->
             <h2>ENTREES</h2>
             <div class="line-plate"></div>
-            <div class="dish-plate">
-                <article class="dish-info-plate">
-                    <h3>Foie Gras Ravioli</h3>
-                    <p>With truffle cream</p>
-                </article>
-                <span>25€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-plate">
+                    <div class="dish-plate">
+                        <article class="dish-info-plate">
+                            <h3>Foie Gras Ravioli</h3>
+                            <p>With truffle cream</p>
+                        </article>
+                        <span class="dish-plate-price">25€</span>
+                    </div>
+                </div>
             </div>
-            <div class="dish-plate">
-                <article class="dish-info-plate">
-                    <h3>Oscietra Caviar</h3>
-                    <p>With buckwheat blinis</p>
-                </article>
-                <span>35€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-plate">
+                    <div class="dish-plate">
+                        <article class="dish-info-plate">
+                            <h3>Oscietra Caviar</h3>
+                            <p>With buckwheat blinis</p>
+                        </article>
+                        <span class="dish-plate-price">35€</span>
+                    </div>
+                </div>
             </div>
-            <div class="dish-plate">
-                <article class="dish-info-plate">
-                    <h3>Lobster and Leek Foam</h3>
-                    <p>Marinated with orange zest</p>
-                </article>
-                <span>20€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-plate">
+                    <div class="dish-plate">
+                        <article class="dish-info-plate">
+                            <h3>Lobster and Leek Foam</h3>
+                            <p>Marinated with orange zest</p>
+                        </article>
+                        <span class="dish-plate-price">20€</span>
+                    </div>
+                </div>
             </div>
-            <div class="dish-plate">
-                <article class="dish-info-plate">
-                    <h3>Duck Foie Gras</h3>
-                    <p>With fig jam and grilled baguette</p>
-                </article>
-                <span>35€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-plate">
+                    <div class="dish-plate">
+                        <article class="dish-info-plate">
+                            <h3>Duck Foie Gras</h3>
+                            <p>With fig jam and grilled baguette</p>
+                        </article>
+                        <span class="dish-plate-price">35€</span>
+                    </div>
+                </div>
             </div>
             <!-- Main dish -->
             <h2>MAIN DISH</h2>
             <div class="line-plate"></div>
-            <div class="dish-plate">
-                <article class="dish-info-plate">
-                    <h3>Fresh Buttered Scallops</h3>
-                    <p>With white celery puree</p>
-                </article>
-                <span>40€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-plate">
+                    <div class="dish-plate">
+                        <article class="dish-info-plate">
+                            <h3>Fresh Buttered Scallops</h3>
+                            <p>With white celery puree</p>
+                        </article>
+                        <span class="dish-plate-price">40€</span>
+                    </div>
+                </div>
             </div>
-            <div class="dish-plate">
-                <article class="dish-info-plate">
-                    <h3>Pan-Fried Lobster</h3>
-                    <p>With mashed sweet potatoes</p>
-                </article>
-                <span>35€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-plate">
+                    <div class="dish-plate">
+                        <article class="dish-info-plate">
+                            <h3>Pan-Fried Lobster</h3>
+                            <p>With mashed sweet potatoes</p>
+                        </article>
+                        <span class="dish-plate-price">35€</span>
+                    </div>
+                </div>
             </div>
-            <div class="dish-plate">
-                <article class="dish-info-plate">
-                    <h3>Braised Ox Tail</h3>
-                    <p>With wild rice and lemon zest</p>
-                </article>
-                <span>44€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-plate">
+                    <div class="dish-plate">
+                        <article class="dish-info-plate">
+                            <h3>Braised Ox Tail</h3>
+                            <p>With wild rice and lemon zest</p>
+                        </article>
+                        <span class="dish-plate-price">44€</span>
+                    </div>
+                </div>
             </div>
             <!-- Desserts -->
             <h2>DESSERTS</h2>
             <div class="line-plate"></div>
-            <div class="dish-plate">
-                <article class="dish-info-plate">
-                    <h3>Chocolate and Hazelnut Macaron</h3>
-                    <p>With caramel butter ice cream</p>
-                </article>
-                <span>18€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-plate">
+                    <div class="dish-plate">
+                        <article class="dish-info-plate">
+                            <h3>Chocolate and Hazelnut Macaron</h3>
+                            <p>With caramel butter ice cream</p>
+                        </article>
+                        <span class="dish-plate-price">18€</span>
+                    </div>
+                </div>
             </div>
-            <div class="dish-plate">
-                <article class="dish-info-plate">
-                    <h3>Baba au rhum</h3>
-                    <p>With lemon drizzle</p>
-                </article>
-                <span>22€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-plate">
+                    <div class="dish-plate">
+                        <article class="dish-info-plate">
+                            <h3>Baba au rhum</h3>
+                            <p>With lemon drizzle</p>
+                        </article>
+                        <span class="dish-plate-price">22€</span>
+                    </div>
+                </div>
             </div>
-            <div class="dish-plate">
-                <article class="dish-info-plate">
-                    <h3>Lemon Meringue Pie</h3>
-                    <p>Destructured</p>
-                </article>
-                <span>23€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-plate">
+                    <div class="dish-plate">
+                        <article class="dish-info-plate">
+                            <h3>Lemon Meringue Pie</h3>
+                            <p>Destructured</p>
+                        </article>
+                        <span class="dish-plate-price">23€</span>
+                    </div>
+                </div>
             </div>
-        <button class="order">Order</button>
+            <button class="order">Order</button>
         </article>
     </main>
     <!-- FOOTER -->
@@ -140,7 +181,7 @@
             <a href="#">
                 <p>Legal</p>
             </a>
-            <a href="#">
+            <a href="mailto:info@ohmyfood.com">
                 <p>Contact</p>
             </a>
         </div>
