--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -185,7 +185,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>                                                                                                                                              +
             <button class="order">Order</button>
         </article>
     </main>
@@ -204,7 +204,7 @@
             <a href="#">
                 <p>Legal</p>
             </a>
-            <a href="#">
+            <a href="mailto:info@ohmyfood.com">
                 <p>Contact</p>
             </a>
         </div>
