--- a/bastille.html
+++ b/bastille.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Full Palette</title>
+    <title>The Full bastille</title>
 
     <!-- Style sheets -->
     <link rel="stylesheet" href="css/main.css" type="text/css">
@@ -47,74 +47,110 @@
             <!-- Starters -->
             <h2>ENTREES</h2>
             <div class="line-bastille"></div>
-            <div class="dish-bastille">
-                <article class="dish-info-bastille">
-                    <h3>Citrus Squid Carpaccio</h3>
-                    <p>With orange zest</p>
-                </article>
-                <span>25€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-bastille">
+                    <div class="dish-bastille">
+                        <article class="dish-info-bastille">
+                            <h3>Citrus Squid Carpaccio</h3>
+                            <p>With orange zest</p>
+                        </article>
+                        <span class="dish-bastille-price">25€</span>
+                    </div>
+                </div>
             </div>
-            <div class="dish-bastille">
-                <article class="dish-info-bastille">
-                    <h3>Grandmoters's Vegetable Soup</h3>
-                    <p>Carrots,parsnips,Jerusalem artichoke</p>
-                </article>
-                <span>35€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-bastille">
+                    <div class="dish-bastille">
+                        <article class="dish-info-bastille">
+                            <h3>Grandmoters's Vegetable Soup</h3>
+                            <p>Carrots,parsnips,Jerusalem artichoke</p>
+                        </article>
+                        <span class="dish-bastille-price">35€</span>
+                    </div>
+                </div>
             </div>
-            <div class="dish-bastille">
-                <article class="dish-info-bastille">
-                    <h3>Onion Soup</h3>
-                    <p>Revisited</p>
-                </article>
-                <span>20€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-bastille">
+                    <div class="dish-bastille">
+                        <article class="dish-info-bastille">
+                            <h3>Onion Soup</h3>
+                            <p>Revisited</p>
+                        </article>
+                        <span class="dish-bastille-price">20€</span>
+                    </div>
+                </div>
             </div>
             <!-- Main dish -->
             <h2>MAIN DISH</h2>
             <div class="line-bastille"></div>
-            <div class="dish-bastille">
-                <article class="dish-info-bastille">
-                    <h3>Scallops</h3>
-                    <p>With mashed parsnip</p>
-                </article>
-                <span>40€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-bastille">
+                    <div class="dish-bastille">
+                        <article class="dish-info-bastille">
+                            <h3>Scallops</h3>
+                            <p>With mashed parsnip</p>
+                        </article>
+                        <span class="dish-bastille-price">40€</span>
+                    </div>
+                </div>
             </div>
-            <div class="dish-bastille">
-                <article class="dish-info-bastille">
-                    <h3>Magret de canard</h3>
-                    <p>With mashed potatoes</p>
-                </article>
-                <span>35€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-bastille">
+                    <div class="dish-bastille">
+                        <article class="dish-info-bastille">
+                            <h3>Magret de canard</h3>
+                            <p>With mashed potatoes</p>
+                        </article>
+                        <span class="dish-bastille-price">35€</span>
+                    </div>
+                </div>
             </div>
-            <div class="dish-bastille">
-                <article class="dish-info-bastille">
-                    <h3>Game Hen</h3>
-                    <p>With vegetable gnocchis</p>
-                </article>
-                <span>44€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-bastille">
+                    <div class="dish-bastille">
+                        <article class="dish-info-bastille">
+                            <h3>Game Hen</h3>
+                            <p>With vegetable gnocchis</p>
+                        </article>
+                        <span class="dish-bastille-price">44€</span>
+                    </div>
+                </div>
             </div>
             <!-- Desserts -->
             <h2>DESSERTS</h2>
             <div class="line-bastille"></div>
-            <div class="dish-bastille">
-                <article class="dish-info-bastille">
-                    <h3>Floral Ice Cream</h3>
-                    <p>With hazelnut butter</p>
-                </article>
-                <span>18€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-bastille">
+                    <div class="dish-bastille">
+                        <article class="dish-info-bastille">
+                            <h3>Floral Ice Cream</h3>
+                            <p>With hazelnut butter</p>
+                        </article>
+                        <span class="dish-bastille-price">18€</span>
+                    </div>
+                </div>
             </div>
-            <div class="dish-bastille">
-                <article class="dish-info-bastille">
-                    <h3>Chocolate Lava Cake</h3>
-                    <p>Revisited</p>
-                </article>
-                <span>22€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-bastille">
+                    <div class="dish-bastille">
+                        <article class="dish-info-bastille">
+                            <h3>Chocolate Lava Cake</h3>
+                            <p>Revisited</p>
+                        </article>
+                        <span class="dish-bastille-price">22€</span>
+                    </div>
+                </div>
             </div>
-            <div class="dish-bastille">
-                <article class="dish-info-bastille">
-                    <h3>Napolean</h3>
-                    <p>With blueberries and marzipan</p>
-                </article>
-                <span>23€</span>
+            <div class="visible-dish-wrap">
+                <div class="dish-wrap-bastille">
+                    <div class="dish-bastille">
+                        <article class="dish-info-bastille">
+                            <h3>Napolean</h3>
+                            <p>With blueberries and marzipan</p>
+                        </article>
+                        <span class="dish-bastille-price">23€</span>
+                    </div>
+                </div>
             </div>
             <button class="order">Order</button>
         </article>
@@ -134,7 +170,7 @@
             <a href="#">
                 <p>Legal</p>
             </a>
-            <a href="#">
+            <a href="mailto:info@ohmyfood.com">
                 <p>Contact</p>
             </a>
         </div>
