--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -53,7 +53,9 @@
                         <div class="dish-palette">
                             <article class="dish-info-palette">
                                 <h3>Escargot</h3>
-                                <p>With southern French spices With southern French</p>
+                                <div class="dish-describe">
+                                    <p>With southern French spices</p>
+                                </div>
                             </article>
                             <span class="dish-palette-price">25€</span>
                         </div>
@@ -185,7 +187,7 @@
                         </div>
                     </div>
                 </div>
-            </div>                                                                                                                                              +
+            </div> +
             <button class="order">Order</button>
         </article>
     </main>
