--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -187,7 +187,7 @@
                         </div>
                     </div>
                 </div>
-            </div> +
+            </div> 
             <button class="order">Order</button>
         </article>
     </main>
