--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -88,8 +88,10 @@
                                 <p>Paris</p>
                             </article>
                         </a>
-                        <i class="far fa-heart main-heart1"></i>
-                        <i class="fas fa-heart main-heart2"></i>
+                        <!-- <div class="main-heart"> -->
+                            <i class="far fa-heart main-heart1"></i>
+                            <i class="fas fa-heart main-heart2"></i>
+                        <!-- </div> -->
                     </div>
                 </div>
                 <div class="rst-ad">
