--- a/bastille.html
+++ b/bastille.html
@@ -56,6 +56,9 @@
                         </article>
                         <span class="dish-bastille-price">25€</span>
                     </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
             </div>
             <div class="visible-dish-wrap">
@@ -67,6 +70,9 @@
                         </article>
                         <span class="dish-bastille-price">35€</span>
                     </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
             </div>
             <div class="visible-dish-wrap">
@@ -77,6 +83,9 @@
                             <p>Revisited</p>
                         </article>
                         <span class="dish-bastille-price">20€</span>
+                    </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
             </div>
@@ -92,6 +101,9 @@
                         </article>
                         <span class="dish-bastille-price">40€</span>
                     </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
             </div>
             <div class="visible-dish-wrap">
@@ -103,6 +115,9 @@
                         </article>
                         <span class="dish-bastille-price">35€</span>
                     </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
             </div>
             <div class="visible-dish-wrap">
@@ -113,6 +128,9 @@
                             <p>With vegetable gnocchis</p>
                         </article>
                         <span class="dish-bastille-price">44€</span>
+                    </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
             </div>
@@ -128,6 +146,9 @@
                         </article>
                         <span class="dish-bastille-price">18€</span>
                     </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
             </div>
             <div class="visible-dish-wrap">
@@ -139,6 +160,9 @@
                         </article>
                         <span class="dish-bastille-price">22€</span>
                     </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
             </div>
             <div class="visible-dish-wrap">
@@ -149,6 +173,9 @@
                             <p>With blueberries and marzipan</p>
                         </article>
                         <span class="dish-bastille-price">23€</span>
+                    </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
             </div>
