--- a/le_gourmand.html
+++ b/le_gourmand.html
@@ -57,6 +57,9 @@
                         </article>
                         <span class="dish-gourmand-price">25€</span>
                     </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
             </div>
             <div class="visible-dish-wrap">
@@ -68,6 +71,9 @@
                         </article>
                         <span class="dish-gourmand-price">35€</span>
                     </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
             </div>
             <div class="visible-dish-wrap">
@@ -78,6 +84,9 @@
                             <p>With truffles</p>
                         </article>
                         <span class="dish-gourmand-price">20€</span>
+                    </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
             </div>
@@ -93,6 +102,9 @@
                         </article>
                         <span class="dish-gourmand-price">40€</span>
                     </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
             </div>
             <div class="visible-dish-wrap">
@@ -104,6 +116,9 @@
                         </article>
                         <span class="dish-gourmand-price">35€</span>
                     </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
             </div>
             <div class="visible-dish-wrap">
@@ -114,6 +129,9 @@
                             <p>With mashed parshnips</p>
                         </article>
                         <span class="dish-gourmand-price">44€</span>
+                    </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
             </div>
@@ -129,6 +147,9 @@
                         </article>
                         <span class="dish-gourmand-price">18€</span>
                     </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
             </div>
             <div class="visible-dish-wrap">
@@ -140,6 +161,9 @@
                         </article>
                         <span class="dish-gourmand-price">22€</span>
                     </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
             </div>
             <div class="visible-dish-wrap">
@@ -150,6 +174,9 @@
                             <p>With hazelnuts</p>
                         </article>
                         <span class="dish-gourmand-price">23€</span>
+                    </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
             </div>
