--- a/the_enchanted_plate.html
+++ b/the_enchanted_plate.html
@@ -56,6 +56,9 @@
                         </article>
                         <span class="dish-plate-price">25€</span>
                     </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
             </div>
             <div class="visible-dish-wrap">
@@ -66,6 +69,9 @@
                             <p>With buckwheat blinis</p>
                         </article>
                         <span class="dish-plate-price">35€</span>
+                    </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
             </div>
@@ -78,6 +84,9 @@
                         </article>
                         <span class="dish-plate-price">20€</span>
                     </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
             </div>
             <div class="visible-dish-wrap">
@@ -88,6 +97,9 @@
                             <p>With fig jam and grilled baguette</p>
                         </article>
                         <span class="dish-plate-price">35€</span>
+                    </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
             </div>
@@ -103,6 +115,9 @@
                         </article>
                         <span class="dish-plate-price">40€</span>
                     </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
             </div>
             <div class="visible-dish-wrap">
@@ -113,6 +128,9 @@
                             <p>With mashed sweet potatoes</p>
                         </article>
                         <span class="dish-plate-price">35€</span>
+                    </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
             </div>
@@ -125,7 +143,9 @@
                         </article>
                         <span class="dish-plate-price">44€</span>
                     </div>
-                </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
             </div>
             <!-- Desserts -->
             <h2>DESSERTS</h2>
@@ -139,6 +159,9 @@
                         </article>
                         <span class="dish-plate-price">18€</span>
                     </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
             </div>
             <div class="visible-dish-wrap">
@@ -150,6 +173,9 @@
                         </article>
                         <span class="dish-plate-price">22€</span>
                     </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
             </div>
             <div class="visible-dish-wrap">
@@ -160,6 +186,9 @@
                             <p>Destructured</p>
                         </article>
                         <span class="dish-plate-price">23€</span>
+                    </div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
             </div>
